--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home | CybriaGames</title>
-        <meta name="description" content="🕹CybriaGames is an unblocked game site hosting over 100+ unblocked games where the danger of internet restrictions dosent apply.">
+        <title>Home | Jean's OP Games</title>
+        <meta name="description" content="🕹Jean's OP Games is an unblocked game site hosting over 100+ unblocked games where the danger of internet restrictions dosent apply.">
         <meta name="keywords" content="games, game, gaming, unblocked games, ubg, unblocked game, cybriagames unblocked, cybria games, cyberia games, cybriagame, cyberiagames">
-        <meta name="author" content="CybriaTech">
+        <meta name="author" content="SAPHIREGAMES">
         <link rel="stylesheet" href="/style/home.css">
         <link rel="stylesheet" href="/style/all.css">
         <link rel="icon" href="/images/cybriagames/favicon-circle.png">
@@ -24,7 +24,7 @@
         <script src="scripts/inject/header.js"></script>
         <div class="space" style="margin-top: 3%;"></div>
             <div id="main-area">
-              <img class="title-img" alt="CYBRIAGAMES" src="/images/cybriagames/logo-name2half.png">
+              <img class="title-img" alt="Jean's OP Games" src="/images/cybriagames/logo-name2half.png">
               <form action="search.html" method="get">
                 <button class="submit"><svg class="fa" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#ffffff" d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg></button>
               <input type="text" name="g" class="search" placeholder="Search For A Game">
@@ -33,14 +33,14 @@
               <button class="homebtn" id="homebtn" onclick="window.location.href='/games/';">Visit Full Site</button>
             </div>
             <div id="introductory">.
-                <p class="int-title" style="margin-left: 175px; margin-right: 175px; margin-top: 50px;"><strong>What is CybriaGames</strong></p>
-                <p class="int-desc" style="margin-left: 175px; margin-right: 175px;">CybriaGames is an unblocked game site hosting over 100+ unblocked games where the danger of internet restrictions dosent apply. Our purpose to making CybriaGames is to ensure everyone can have even the slightest bit of fun in school, whether it's playing the countless amounts of unique games, using school related hacks or just chatting in the widgetbot discord server. We hope you like your visit here as any feedback given will greatly help! 🤗</p>
-                <p class="int-title" style="margin-left: 175px; margin-right: 175px; margin-top: 50px;"><strong>What does CybriaGames have that makes it unique?</strong></p>
-                <p class="int-desc" style="margin-left: 175px; margin-right: 175px;">CybriaGames, unlike most other unblocked game sites, has more than just games, these include a large database of proxy links (auto-selected by which are unblocked), bookmarklets, advanced settings and a widgetbot chatroom (which can also be switched to other chat apps)!</p>
-                <p class="int-title" style="margin-left: 175px; margin-right: 175px; margin-top: 50px;"><strong>Is CybriaGames safe</strong></p>
-                <p class="int-desc" style="margin-left: 175px; margin-right: 175px;">Yes, we are 100% safe, we ensure that no ad, proxy link (not 100% validated), game, bookmarklet or any external/internal assets do not pose any malicious threat to you or us. To validate that, CybriaGame's source code is open sourced and free for anyone to see and distribute, and remember. If your school says otherwise, they're pure bullshit.</p>
+                <p class="int-title" style="margin-left: 175px; margin-right: 175px; margin-top: 50px;"><strong>What is Jean's OP Games</strong></p>
+                <p class="int-desc" style="margin-left: 175px; margin-right: 175px;">Jean's OP Games is an unblocked game site hosting over 100+ unblocked games where the danger of internet restrictions dosent apply. Our purpose to making Jean's OP Games is to ensure everyone can have even the slightest bit of fun in school, whether it's playing the countless amounts of unique games, using school related hacks. We hope you like your visit here as any feedback given will greatly help! 🤗</p>
+                <p class="int-title" style="margin-left: 175px; margin-right: 175px; margin-top: 50px;"><strong>What does Jean's OP Games have that makes it unique?</strong></p>
+                <p class="int-desc" style="margin-left: 175px; margin-right: 175px;">Jean's OP Games, unlike most other unblocked game sites, has more than just games, these include a large database of proxy links (auto-selected by which are unblocked), bookmarklets, advanced settings and a widgetbot chatroom (which can also be switched to other chat apps)!</p>
+                <p class="int-title" style="margin-left: 175px; margin-right: 175px; margin-top: 50px;"><strong>Is Jean's OP Games safe</strong></p>
+                <p class="int-desc" style="margin-left: 175px; margin-right: 175px;">Yes, we are 100% safe, we ensure that no ad, proxy link (not 100% validated), game, bookmarklet or any external/internal assets do not pose any malicious threat to you or us. To validate that, Jean's OP Games's source code is open sourced and free for anyone to see and distribute, and remember. If your school says otherwise, they're pure nonesence.</p>
                 <p class="int-title" style="margin-left: 175px; margin-right: 175px; margin-top: 50px;"><strong>Have more questions</strong></p>
-                <p class="int-desc" style="margin-left: 175px; margin-right: 175px;">Not all questions and answers will be listed here, if you would like to find an answer to a question regarding CybriaGames, please visit the FAQ page. If you can't find an answer/question then feel free to create a new question! You're give yourself and everyone more help</p>
+                <p class="int-desc" style="margin-left: 175px; margin-right: 175px;">Not all questions and answers will be listed here, if you would like to find an answer to a question regarding Jean's OP Games, please visit the FAQ page. If you can't find an answer/question then feel free to create a new question! You're give yourself and everyone more help</p>
                 <br>
               </div>
         <div class="space" style="margin-bottom: 5%;"></div>
