--- a/mobile.html
+++ b/mobile.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="🕹CybriaGames is an unblocked game site hosting over 100+ unblocked games where the danger of internet restrictions dosent apply.">
+    <meta name="description" content="🕹Jean's OP Games is an unblocked game site hosting over 100+ unblocked games where the danger of internet restrictions dosent apply.">
     <meta name="keywords" content="games, game, gaming, unblocked games, ubg, unblocked game, cybriagames unblocked, cybria games, cyberia games, cybriagame, cyberiagames">
     <link rel="stylesheet" href="/style/all.css">
-    <title>Mobile Not Supported | CybriaGames</title>
+    <title>Mobile Not Supported | Jean's OP Games</title>
     <link rel="icon" href="/images/cybriagames/favicon-circle.png">
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-P8QQRX5QCQ"></script>
@@ -22,7 +22,7 @@
 <body>
   <main style="margin-top:70%; padding: 10px">
     <p style="font-weight: bold; color: #fff;">Mobile Not Supported</p>
-    <p style="font-weight: 400; color: #fff;">CybriaGames on mobile hasn't been worked on. Sorry!</p>
+    <p style="font-weight: 400; color: #fff;">Jean's OP Games on mobile hasn't been worked on. Sorry!</p>
     <br>
     <br>
   </main>
